--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      pages: write
+      id-token: write
+    
     strategy:
       matrix:
         node-version: [18.x]
@@ -35,9 +39,7 @@ jobs:
         path: "build"
     - name: Deploy GitHub Pages site
       uses: actions/deploy-pages@v4.0.0
-      with:
-        # GitHub token
-        token: ${{ secrets.GITHUB_TOKEN }}
+      
           
           
           
