--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,14 +31,10 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
-    - name: Configure GitHub Pages
-      uses: actions/configure-pages@v4.0.0
-    - name: Upload GitHub Pages artifact
-      uses: actions/upload-pages-artifact@v3.0.0
+    - name: Deploy 🚀
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
-        path: "build"
-    - name: Deploy GitHub Pages site
-      uses: actions/deploy-pages@v4.0.0
+        folder: build # The folder the action should deploy.
       
           
           
