--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frc1807",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://normana10.github.io/1807website",
   "dependencies": {
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
